# s4casting

./: .gitignore  CHANGELOG.md  Makefile  README.md  REUSE.toml  pyproject.toml  setup.sh  sync_repos.sh
.github/workflows/: ci.yml  opso.yml
configs/: chronos2_cuda.toml  cpu.toml  cuda-ddp.toml  cuda-tiny.toml  cuda.toml  inference.toml  m4_cuda.toml  mps.toml  transformer.toml
data/: get_data.sh
docs/: CITATION.md  CODEOWNERS.md  CODE_OF_CONDUCT.md  CONFIGURATION.md  CONTRIBUTING.md  DATA_SOURCES.md  EVALUATION.md  GOVERNANCE.md  INSTALLATION.md  REPOSITORY.md  SECURITY.md  SUPPORT.md  USAGE.md
notebooks/: 00_data_preparation.ipynb  01_train_model.ipynb  02_inference.ipynb  03_evaluation.ipynb  04_train_with_weather_time_location.ipynb  05_load_forecasting.ipynb
scripts/: convert_to_croissant.py  download_weather_data.py  format_dataset.py  inference.py  liander_power_eda.py  train.py  validate_croissant.py
src/s4casting/core/: __init__.py  authenticate.py  batcher.py  benchmarker.py  checkpoint.py  cli.py  config.py  context.py  distributions.py  evaluator.py  functional.py  hooks.py  logger.py  loss.py  machine.py  model_container.py  tasks.py  trainer.py  wandb_setup.py
src/s4casting/data/: utils.py
src/s4casting/data/dataset/: __init__.py  croissant_adapter.py  dataset.py  indexes.py  interface.py  numpy_data.py
src/s4casting/data/files/: loader.py
src/s4casting/data/preparation/: constants.py  dataset_formatter.py  weather.py
src/s4casting/eval/: evaluator_heads.py  external_data_eval.py  metrics.py
src/s4casting/eval/stef_benchmark/: beam_callback.py  model_interface.py
src/s4casting/eval/stef_benchmark/datasets/: horizon_window.py
src/s4casting/factories/: __init__.py  batcher.py  benchmarker.py  checkpointer.py  evaluator.py  evaluator_head.py  machine.py  model_container.py  optimizer.py  scheduler.py  trainer.py
src/s4casting/inference/: runner.py
src/s4casting/model/: _blocks.py  _encoders.py  _heads.py  _norm.py  _s4_kernel.py  _selective_scan_interface.py  chronos.py  mamba.py  mambacpu.py  ss.py  transformer.py  weather.py
src/s4casting/visualisation/: __init__.py  pdf_plotter.py  quantile_plotter.py
tests/: conftest.py  test_dataset_formatter.py  test_inference.py  test_metrics.py  test_model.py  test_plotting.py  utils.py
tests/assets/: test.toml
tests/end_to_end/: test_stefbeam.py  test_train_cpu.py  test_train_cuda.py
